fix: align default

--- a/packages/components/bolt-text/src/text.scss
+++ b/packages/components/bolt-text/src/text.scss
@@ -152,6 +152,9 @@ $bolt-text-v2--plus-letter-spacing: 0.05rem;
   }
 
   // Align content
+  &--align-inherit {
+    text-align: inherit;
+  }
   &--align-left {
     text-align: left;
   }
